ch4_services/external-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: external-endpoint  
spec:                     
  ports:
    - port: 80
