ch4_services/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: migo-headless
spec:
  clusterIP: None # 
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: migo-pod
