ch4_services/svc-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: migo-svc
spec:
  sessionAffinity: ClientIP  
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: migo-pod
