ch4_services/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: migo-svc
spec:
  ports:
    - port: 80         
      targetPort: 8080  
  selector:
    app: migo-pod
